package POO.Parqueadero_en_java;

public class Cubiculo {
    int id;
    int numero;
    double ancho;
    double largo;
    String estado;
    String tipo;
    String zona;
}
