package POO.Parqueadero_en_java;

import java.sql.Date;
import java.time.LocalDate;

public class Horario {
    int id;
    Date dia;
    LocalDate horaInicio;
    LocalDate horaFin;
}
