package POO.Parqueadero_en_java;


public class Parking {
    int id;
    String nombre;
    double area;
    int cubiculos;
    String direccion;
    String estado;
}
