package POO.Parqueadero_en_java;

public class Tarifa {
    int id;
    float valor;
    String tipo;
    float unidad;
}
