package POO.Parqueadero_en_java;

public class Turno {
    int id;
    Horario horario;
    Vigilante vigilante;
    Parking parqueadero;
    String cargo;
    
}
