package POO.Parqueadero_en_java;

public class Usuario {
    String identificación;
    String tipo_id;
    String nombre;
    String apellido;
    String telefono;
    String email;
    String rol;
    String foto;
    boolean reserva;
}
