package POO.Parqueadero_en_java;

public class Vehiculo {
    String placa;
    String marca;
    String color;
    String modelo;
    String descripcion;
}
