package POO.Parqueadero_en_java;

public class Vigilante {
    public String nombre;
    public String rol;
    public Planilla planilla;
}
